# napari-roi-registration

./: LICENSE  README.md  mkdocs.yml  pyproject.toml  roi_registration_runner.py  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: -bug--bug-report.md  bug-report.md  bug_report.md  documentation.md  feature_request.md
.napari/: config.yml.txt
docs/: index.md
src/napari_roi_registration/: __init__.py  _widget.py  napari.yaml  registration_utils.py  registration_utils_1.py
src/napari_roi_registration/_tests/: test_widget.py
