[metadata]
name = napari-roi-registration

author = Andrea Bassi and Giorgia Tortora
author_email = giorgia.tortora@polimi.it
url = https://github.com/GiorgiaTortora/napari-roi-registration
license = BSD-3-Clause
description = A plugin to perform roi registration.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/GiorgiaTortora/napari-roi-registration/issues
    Documentation = https://github.com/GiorgiaTortora/napari-roi-registration#README.md
    Source Code = https://github.com/GiorgiaTortora/napari-roi-registration
    User Support = https://github.com/GiorgiaTortora/napari-roi-registration/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    numpy
    magicgui
    qtpy
    cv2


[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.packages.find]
where = src

[options.package_data]
* = *.yaml

[options.entry_points] 
napari.manifest = 
    napari-roi-registration = napari_roi_registration:napari.yaml
